--- a/index.html
+++ b/index.html
@@ -139,21 +139,21 @@
 		<section class="slider-section">
 			<div class="slider">
 				<div class="slider__item">
-					<img src="img/Main-Slider/01.png" alt="" class="slider__item-img slider__item-img-shoe">
+					<img src="img/Main-Slider/01.svg" alt="" class="slider__item-img slider__item-img-shoe">
 					<div class="slider__item-right-content">
 						<h2 class="slider__item-header">bRANDED<br> sHOES</h2>
 						<button class="btn">sHOP</button>
 					</div>
 				</div>
 				<div class="slider__item">
-					<img src="img/Main-Slider/02.png" alt="" class="slider__item-img">
+					<img src="img/Main-Slider/02.svg" alt="" class="slider__item-img">
 					<div class="slider__item-right-content">
 						<h2 class="slider__item-header">bRANDED<br> sHOES</h2>
 						<button class="btn">sHOP</button>
 					</div>
 				</div>
 				<div class="slider__item">
-					<img src="img/Main-Slider/03.png" alt="" class="slider__item-img">
+					<img src="img/Main-Slider/03.svg" alt="" class="slider__item-img">
 					<div class="slider__item-right-content">
 						<h2 class="slider__item-header">bRANDED<br> sHOES</h2>
 						<button class="btn">sHOP</button>
