--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="container">
 					<div class="header__top-inner">
 						<a href="#" class="header__logo">Aditii</a>
-						<input type="text" class="header__search">
+						<input type="search" class="header__search">
 						<div class="header__money">
 							<img src="img/Header/01.svg" alt="">
 							<div class="money__number">$300</div>
@@ -35,7 +35,7 @@
 			<div class="container">
 				<div class="header__body">
 					<nav class="header__menu">
-						<input type="text" class="nav__search">
+						<input type="search" class="nav__search">
 						<div class="nav__money">
 							<img src="img/Header/05.svg" alt="">
 							<div class="nav__money__number">$300</div>
@@ -139,42 +139,42 @@
 		<section class="slider-section">
 			<div class="slider">
 				<div class="slider__item">
-					<img src="img/Main-Slider/01.svg" alt="" class="slider__item-img slider__item-img-shoe">
+					<img src="img/Main-Slider/01.jpg" alt="" class="slider__item-img slider__item-img-shoe">
 					<div class="slider__item-right-content">
 						<h2 class="slider__item-header">bRANDED<br> sHOES</h2>
 						<button class="btn">sHOP</button>
 					</div>
 				</div>
 				<div class="slider__item">
-					<img src="img/Main-Slider/02.svg" alt="" class="slider__item-img">
+					<img src="img/Main-Slider/02.jpg" alt="" class="slider__item-img">
 					<div class="slider__item-right-content">
 						<h2 class="slider__item-header">bRANDED<br> sHOES</h2>
 						<button class="btn">sHOP</button>
 					</div>
 				</div>
 				<div class="slider__item">
-					<img src="img/Main-Slider/03.svg" alt="" class="slider__item-img">
+					<img src="img/Main-Slider/03.jpg" alt="" class="slider__item-img">
 					<div class="slider__item-right-content">
 						<h2 class="slider__item-header">bRANDED<br> sHOES</h2>
 						<button class="btn">sHOP</button>
 					</div>
 				</div>
 				<div class="slider__item">
-					<img src="img/Main-Slider/01.png" alt="" class="slider__item-img slider__item-img-shoe">
+					<img src="img/Main-Slider/01.jpg" alt="" class="slider__item-img slider__item-img-shoe">
 					<div class="slider__item-right-content">
 						<h2 class="slider__item-header">bRANDED<br> sHOES</h2>
 						<button class="btn">sHOP</button>
 					</div>
 				</div>
 				<div class="slider__item">
-					<img src="img/Main-Slider/02.png" alt="" class="slider__item-img">
+					<img src="img/Main-Slider/02.jpg" alt="" class="slider__item-img">
 					<div class="slider__item-right-content">
 						<h2 class="slider__item-header">bRANDED<br> sHOES</h2>
 						<button class="btn">sHOP</button>
 					</div>
 				</div>
 				<div class="slider__item">
-					<img src="img/Main-Slider/03.png" alt="" class="slider__item-img">
+					<img src="img/Main-Slider/03.jpg" alt="" class="slider__item-img">
 					<div class="slider__item-right-content">
 						<h2 class="slider__item-header">bRANDED<br> sHOES</h2>
 						<button class="btn">sHOP</button>
